--- a/client/src/styles/postStyle.css
+++ b/client/src/styles/postStyle.css
@@ -13,6 +13,7 @@
 .userInfo{
     display: flex;
     justify-content: space-between;
+
 }
 
 .imgAndNameContainer{
@@ -83,65 +84,52 @@
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.452),-2px -2px 3px rgba(0, 0, 0, 0.452),-2px 2px 3px rgba(0, 0, 0, 0.452),2px -2px 3px rgba(0, 0, 0, 0.452);
 
 }
-@media screen and (max-width:754px) {
- 
-}
+
 .popupinvisible{
     display: none;
 }
 .postInfo{
+
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
+
 .viewComment{
     display: flex;
     width: 55%;
+  
 }
 .longPost{
-    margin-right: 1rem;
     cursor: pointer;
+    margin-right: 0.2rem;
 }
 
 
 
-@media screen and (max-width:380px) {
-    .viewComment{
-        flex-direction: column;
-    }
-}
+
 .heartContainer{
     width: 40%;
     display: flex;
     align-items: center;
-    justify-content: center;
-   padding:0px 20px;
+    justify-content: flex-end;
 }
 .heartContainer p{
-
-    margin-right: -10px;
+margin-right: -20px;
 }
-.heart {
-    margin-left: -10px;
-    width: 100px;
-    height: 100px;
-    background: url(https://cssanimation.rocks/images/posts/steps/heart.png) no-repeat;
+.heart{
     cursor: pointer;
+    height: 100px;
+    width: 100px;
+    background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+    background-position: left;
+    background-repeat:no-repeat;
+    background-size:2900%;
   }
-  /* .heart:hover {
-    background-position: -2800px 0;
-     transition: background 1s steps(28); 
-  } */
   .heartactive{
-    background-position: -2800px 0;
-    transition: background 1s steps(28); 
+    animation: heart-burst .8s steps(28) 1;
   }
-  @keyframes fave-heart {
-    0% {
-      background-position: 0 0;
-    }
-    100% {
-      background-position: -2800px 0;
-    }
+  @keyframes heart-burst {
+    from {background-position:left;}
+    to { background-position:right;}
   }
-  
