--- a/client/src/styles/longStyle.css
+++ b/client/src/styles/longStyle.css
@@ -1,7 +1,9 @@
 .LongPost{
     width: 80%;
-    max-width: 1500px;
+    max-width: 1000px;
     margin: 2rem auto;
+
+
 }
 
 
@@ -37,4 +39,10 @@ align-items: center;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+
+.postInfo{
+    display: flex;
+    justify-content: center;
+ max-width: 800px;
 }
