show new comments added

--- a/client/src/styles/longStyle.css
+++ b/client/src/styles/longStyle.css
@@ -26,11 +26,13 @@
 .commentContainer{
         width: 80%;
         max-width: 1500px;
+        align-items: center;
+        display: flex;
         margin-top: 1rem;
 }
 .commentNameContainer{
     display: flex;
-align-items: center;
+   align-items: center;
 }
 .m{
     margin-left: 1rem;
@@ -39,10 +41,25 @@ align-items: center;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .postInfo{
     display: flex;
     justify-content: center;
  max-width: 800px;
+}
+.LonguserParagraph{
+    margin: 0 1rem;
+    font-family: 'Work Sans', sans-serif; 
+  
+
+}
+.dltBtn{
+    background-color: red;
+    border:0;
+    padding:5px 10px; 
+    color:white;
+    border-radius: 20px;
+    cursor: pointer;
 }
