--- a/client/src/styles/User.module.css
+++ b/client/src/styles/User.module.css
@@ -1,5 +1,4 @@
 .container{
-    max-width: 300px;
     min-height: 200px;
     display: flex;
     justify-content: flex-start;
@@ -7,7 +6,6 @@
 }
 .userBox{
 display: flex;
-width: 90%;
 justify-content:flex-start;
 margin-left: 2rem;
 align-items: center;
@@ -25,7 +23,12 @@ cursor: pointer;
     monospace;
     font-size: 1.5rem;
 }
-
+.textContainer{
+    margin-left: 1rem;
+    max-width: 200px;
+    overflow: hidden;
+    display: flex;
+}
 
 @media screen  and (max-width:440px){
     
