--- a/client/src/styles/profileStyle.module.css
+++ b/client/src/styles/profileStyle.module.css
@@ -264,3 +264,19 @@
     border: 0;
     padding:10px;
 }
+.newCommentContainer{
+    margin: 1rem 0;
+    display: flex;
+    align-items: center;
+}
+.okBtn{
+    margin-left: 1rem;
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: transparent;
+    border: 1px solid #677698;
+}
+.okBtn:hover{
+     background-color: #677698;
+     color:white
+}
