--- a/client/src/styles/userExistStyle.css
+++ b/client/src/styles/userExistStyle.css
@@ -71,7 +71,7 @@
     border: 2px solid #000000d5;
     padding:10px;
     max-height: 1000px;
-    max-width: 2000p x;
+    max-width: 2000px;
 }
 
 
@@ -140,6 +140,21 @@
     }
     .sortContainer{
         width: 90%;
+    }
+    .createPostBtn{
+        margin-top: 2rem;
+    }
+    .searchPost{
+        flex-direction: column;
+        width: 95%;
+        margin: 1rem auto;
+    }
+    .INheader{
+        width: 100%;
+    }
+    .INkey{
+        width: 100%;
+        margin: 2rem 0;
     }
 }
 .sort:focus{
@@ -263,6 +278,11 @@
     margin-bottom: 2rem;
 }
 
+.scPost{
+    text-align: center;
+    color:rgb(0, 160, 0);
+    font-size: 2rem;
+}
 @media screen and (max-width:600px) {
     .search {
        flex-direction: column;
@@ -276,5 +296,8 @@
     }
     .searchBtn{
         width: 90%;
+    }
+    .scPost{
+        font-size: 1rem;
     }
 }
