--- a/client/src/styles/homePageStyle.css
+++ b/client/src/styles/homePageStyle.css
@@ -79,6 +79,7 @@ html{
     padding:15px 20px;
     border-radius: 30px;
     color: white;
+
 }
 .whatWeOffer{
     background-color: #494b56;
@@ -278,6 +279,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    list-style: none;
     flex-direction: column;
 }
 .followMenu{
@@ -303,6 +305,6 @@ footer{
 .tryOutTodayText{
     text-shadow: 2px 2px 5px black;
 }
-.getStarted, .whatWeOffer{
-    cursor: pointer;
+.getStarted, .whatWeOffer,.tryOutTodayrBtn{
+    cursor:pointer;
 }
