dm adding, new style added

--- a/client/src/Components/Layout/styleLayout.css
+++ b/client/src/Components/Layout/styleLayout.css
@@ -22,9 +22,11 @@
   }
   
   .links{
+  
     display: flex;
     justify-content: space-around;
     align-items: center;
+
   }  
   .firstLinks{
     margin-right: 0.5rem;
@@ -71,9 +73,9 @@
   border-radius: 40px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
   position: relative;
-  width: 25%;
+  
+
 }
 
 .link{
@@ -209,6 +211,7 @@
   display: none;
   width: 25%;
 
+
 }
 
 @keyframes movemenu {
@@ -216,7 +219,7 @@
     left:100%;
   }
   100%{
-    left:50%;
+    left:49%;
   }
 }
 
@@ -224,6 +227,7 @@
   margin: 0.2rem 0;
   display: block;
   width: 30%;
+  min-width:30px;
   height: 5px;
   background-color: white;
 }
@@ -232,14 +236,15 @@
   display: none;
 }
 .dropdownvisible{
-  top:0%;
+  top:0;
   display: flex;
   flex-direction: column;
+  position: fixed;
   height: 90vh;
   width: 50vw;
   background-color: rgb(255, 255, 255);
   box-shadow: 1px 1px 1px black,-1px -1px 1px black,1px -1px 1px black,-1px 1px 1px black;
-  position: absolute;
+  
   animation: movemenu 1s forwards;
   overflow: hidden;
 }
@@ -291,6 +296,7 @@
   }
   .firstLinksContainer{
     display: none;
+
   }
   .btnContainer{
     width: 60%;
@@ -299,7 +305,15 @@
   .ulList{
     font-size: 1rem;
   }
-  
+  .links{
+    flex-direction: row-reverse;
+  }
+  .btnContainer{
+    width: 0;
+  }
+  .logout{
+   margin-left: 0;
+  }
 }
 @media screen and (max-width:450px) {
   .ulList{
@@ -308,3 +322,19 @@
 }
 
 
+
+.closeMenu{
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+@media screen and (max-width:900px) {
+   .logo{
+     width: 40%;
+   }
+   .links{
+     width: 60%;
+   }
+}
