--- a/client/src/styles/postStyle.css
+++ b/client/src/styles/postStyle.css
@@ -26,7 +26,8 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: 1rem;
+    margin-right: 2rem;
+    
 }
 .userName{
     font-family: 'Work Sans', sans-serif;
@@ -62,6 +63,9 @@
 
 .dropdown{
     cursor: pointer;
+    margin-left: 2rem;
+    margin-right: 2rem;
+
 }
 .dot{
     background-color: #353535;
@@ -127,7 +131,7 @@ margin-right: -20px;
     background-size:2900%;
   }
   .heartactive{
-    animation: heart-burst .8s steps(28) 1;
+    animation: heart-burst .8s steps(28) 1 forwards;
   }
   @keyframes heart-burst {
     from {background-position:left;}
