--- a/client/src/styles/profileStyle.module.css
+++ b/client/src/styles/profileStyle.module.css
@@ -239,10 +239,12 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .editContainer{
+ 
+     width: 80%;
      display: flex;
      justify-content: center;
      align-items: center;
-     margin: 2rem 0;
+     margin: 2rem auto;
 
      flex-direction: column;    
 }
