--- a/client/src/Components/Layout/styleLayout.css
+++ b/client/src/Components/Layout/styleLayout.css
@@ -13,7 +13,6 @@
     width: 100%;
   }
   .logo{
-    background-color: red;
     min-width: 100px;
   }
   @media screen and (max-width:300px) {
@@ -298,7 +297,6 @@
   }
   .logo,.links,.linksexist{
     width: 90%;
-       
   }
   .linksexist{
     display: flex;
@@ -330,6 +328,14 @@
   .logout{
    margin-left: 0;
   }
+  .logo{
+    padding:0;
+    margin: 0;
+    width: 90%;
+  }
+  .logo img{
+    width: 90%;
+  }
 }
 @media screen and (max-width:450px) {
   .ulList{
@@ -346,14 +352,14 @@
   cursor: pointer;
 }
 
-@media screen and (max-width:900px) {
+/* @media screen and (max-width:900px) {
    .logo{
      width: 40%;
    }
    .links{
      width: 60%;
    }
-}
+} */
 
 .closeanimation{
   background-color: red;
