--- a/client/src/styles/longStyle.css
+++ b/client/src/styles/longStyle.css
@@ -70,3 +70,11 @@
     width: 75px;
     height:75px;
 }
+.commentBtn{
+    margin-left: 1rem;
+    background-color: #48416B;
+    color:white;
+    border: 0;
+    border-radius: 10px;
+    padding:10px;
+}
